# ai-buddy

./: Cargo.toml
buddy/: buddy.toml  instruction.md
src/: error.rs  main.rs
src/ais/: assts.rs  mod.rs  msg.rs
src/ais/asst/: mod.rs
src/buddy/: config.rs  mod.rs
